# ml-zoomcamp

./: .gitignore
01-intro/: 07-numpy.ipynb  08-linear-algebra.ipynb  09-pandas.ipynb  homework.ipynb
02-regression/: 02-data-preparation.ipynb  homework.ipynb
03-classification/: classification.ipynb  homework.ipynb
04-evaluation/: evaluation.ipynb  homework.ipynb
05-deployment/: .dockerignore  Dockerfile  fly.toml  marketing.py  ping.py  predict.py  pyproject.toml  train.py  ustomer = {.js  workshop-uv-fastapi.ipynb
05-deployment-homework/: Dockerfile  homework.ipynb  predict.py  pyproject.toml
06-trees/: homework.ipynb  trees.ipynb
08-deep-learning/: homework_w8.ipynb  notebook.ipynb  notebook_w8.ipynb
09-serverless/homework/: Dockerfile  homework.ipynb  lambda_function.py  test.py
09-serverless/workshop-serverless/keras/: lambda_function.py
09-serverless/workshop-serverless/keras/models/: convert-saved-model.py
09-serverless/workshop-serverless/pytorch/: Dockerfile  lambda_function.py
09-serverless/workshop-serverless/sklearn/: invoke.py  lambda_function.py  publish.sh  pyproject.toml  test.py
09-serverless/workshop-serverless/sklearn/train/: pyproject.toml
